# namethatpest-be

./: .gitignore  README.md  main.py  pyproject.toml
fastapi_backend/app/controllers/: dev_animal_controllers.py  insect_controllers.py
fastapi_backend/app/models/: dev_animal_models.py  insect_models.py
fastapi_backend/app/routes/: api.py
fastapi_backend/app/schemas/: database.py
fastapi_backend/db/: db_manager.py  setup-dbs.sql
fastapi_backend/db/data/dev_data/: images.json  seed_data.json
fastapi_backend/db/data/test_data/: seed_data.json
fastapi_backend/db/schemas/: seed_models.py
fastapi_backend/db/seeds/: run_seed.py  seed.py
fastapi_backend/db/utils/: seed_utils.py
tests/test_app/: conftest.py  test_app.py
tests/test_seed/: conftest.py  test_seed.py
